--- a/sabina-03-03-21/style1.css
+++ b/sabina-03-03-21/style1.css
@@ -270,7 +270,7 @@ input{
 
 
 
-footer{
+/* footer{
     width: 100%;
     height: 50px;
     background-color: #333333;
@@ -292,4 +292,4 @@ footer{
     margin-left: 1000px;
     margin-top: -50px;
 }
- 
+  */
