--- a/sass28.03/style.scss
+++ b/sass28.03/style.scss
@@ -60,15 +60,17 @@ nav{
         transition: .5s;
     }
 }
-}.card-img-overlay{
-    
+}
+.card{
+    background-attachment: fixed;
+   .card-img-overlay{
     display: flex;
     flex-direction: column;
     justify-content: center;
     font-family: 'Open Sans', sans-serif;
     background-color: rgba($color: #000000, $alpha: 0.6);
     color: white;
-    
+    background-attachment: fixed;
 
     h5{
         font-size: 50px;
@@ -90,11 +92,14 @@ nav{
         background-color: black;
         transition: .5s;
     }
+} 
 }
+
 /*Section1*/
 .section-bg{
     background-color: #1B1B1B;
     margin-top: 100px;
+    
     .container {
         position: relative;
         z-index: 10;
