--- a/sass02.04/style.css
+++ b/sass02.04/style.css
@@ -683,6 +683,9 @@ body .hero .container .hero-text button:hover {
 }
 
 @media only screen and (max-width: 736px) {
+  body .hero .container nav .social {
+    display: none;
+  }
   body .hero .container nav .search {
     display: inline-block;
   }
