--- a/sass1504/style.css
+++ b/sass1504/style.css
@@ -1,11 +1,23 @@
+body {
+  overflow-x: hidden;
+}
+
 .header {
   width: 100%;
   height: 100vh;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url("../image/porto-bg.webp");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../image/porto-bg.webp");
+  background: url("../image/porto-bg.webp");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
+  z-index: 10000;
+}
+
+.header .buy-main {
+  z-index: 10000;
+}
+
+.header .buy:hover {
+  margin-left: 10px;
 }
 
 .header img {
@@ -42,9 +54,444 @@
   background-color: #0182D7;
   border: none;
   color: white;
+  z-index: 10000;
 }
 
 .header button:hover {
   background-color: #2c91d4;
+}
+
+.section1 {
+  width: 100%;
+  height: 700px;
+  background-color: #1C2023;
+  margin-top: 200px;
+}
+
+.section1 .card {
+  border-radius: 20px;
+  background-color: #4e5257;
+}
+
+.section1 .content {
+  color: white;
+}
+
+.section1 .p-content {
+  color: white;
+}
+
+.section2 {
+  margin-top: 50px;
+  -webkit-clip-path: polygon(0 8%, 100% 0, 100% 94%, 0% 100%);
+          clip-path: polygon(0 8%, 100% 0, 100% 94%, 0% 100%);
+  width: 100%;
+  height: 1400px;
+  background-color: #0169FE;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.section2 .three-div {
+  -webkit-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+}
+
+.section2 .three-div .three-div1 {
+  width: 200px;
+  height: 40px;
+  background-color: #055DDC;
+  margin-top: 20px;
+  text-align: center;
+  line-height: 40px;
+  font-weight: 1000;
+  font-weight: 1000;
+  color: white;
+  margin-left: 50px;
+  border-radius: 5px;
+}
+
+.section2 .three-div .three-div2 {
+  width: 450px;
+  height: 60px;
+  background-color: #0E3B7C;
+  margin-top: 20px;
+  text-align: center;
+  line-height: 60px;
+  font-weight: 1000;
+  color: white;
+  border-radius: 5px;
+}
+
+.section2 .three-div .three-div3 {
+  width: 150px;
+  height: 40px;
+  background-color: #22252A;
+  margin-top: 20px;
+  line-height: 40px;
+  text-align: center;
+  font-weight: 1000;
+  color: white;
+  border-radius: 5px;
+  margin-left: 150px;
+}
+
+.section2 .content-2 {
+  color: white;
+  width: 400px;
+}
+
+.section2 .cards-main {
+  margin-top: 50px;
+}
+
+.section2 button {
+  width: 170px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: #151719;
+  border: none;
+  color: white;
+  font-weight: 500;
+}
+
+.section2 button:hover {
+  background-color: #202427;
+}
+
+.section3 {
+  width: 100%;
+  height: 1300px;
+  -webkit-clip-path: polygon(0 0, 100% 5%, 100% 95%, 50% 100%, 50% 100%, 0 95%);
+          clip-path: polygon(0 0, 100% 5%, 100% 95%, 50% 100%, 50% 100%, 0 95%);
+  background-color: #1C2023;
+  margin-top: 100px;
+}
+
+.section3 .sect3-content {
+  text-align: center;
+}
+
+.section3 .sect3-content h1 {
+  font-family: 'Orelega One', cursive;
+  color: white;
+}
+
+.section3 .sect3-content p {
+  color: gray;
+}
+
+.section4 {
+  width: 100%;
+  height: 700px;
+  margin-top: 200px;
+  -webkit-clip-path: polygon(50% 8%, 100% 1%, 100% 89%, 50% 100%, 0 89%, 0 0);
+          clip-path: polygon(50% 8%, 100% 1%, 100% 89%, 50% 100%, 0 89%, 0 0);
+  background-color: #1C2023;
+}
+
+.section4 .sect4-content {
+  text-align: center;
+  color: white;
+}
+
+.section4 .carousel {
+  margin-top: 50px;
+}
+
+.section4 .btn {
+  width: 170px;
+  height: 40px;
+  border-radius: 20px;
+  background-color: #151719;
+  border: none;
+  color: white;
+  font-weight: 500;
+}
+
+.section4 .btn:hover {
+  background-color: #202427;
+}
+
+.section5 {
+  width: 100%;
+  height: 700px;
+  margin-top: 200px;
+  -webkit-clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
+          clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
+  background-color: #0169FE;
+}
+
+.section5 .sect5-content {
+  padding-top: 100px;
+}
+
+.section5 .sect5-content h1 {
+  color: white;
+}
+
+.section5 .sect5-content h2 {
+  color: white;
+}
+
+.section5 .sect5-content2 {
+  margin-top: 50px;
+}
+
+.section5 .row {
+  margin-top: 50px;
+}
+
+.section5 .row p {
+  font-size: 20px;
+  color: white;
+}
+
+.section5 .btn {
+  width: 200px;
+  height: 60px;
+  border-radius: 30px;
+  background-color: #151719;
+  border: none;
+  color: white;
+  font-weight: 500;
+  margin-top: 50px;
+}
+
+.section5 .btn:hover {
+  background-color: #202427;
+}
+
+.footer {
+  width: 100%;
+  height: 400px;
+  background-color: #1C2023;
+}
+
+.footer .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer .row button {
+  width: 130px;
+  height: 50px;
+  border-radius: 30px;
+  background-color: #151719;
+  border: none;
+  color: white;
+  font-weight: 500;
+  margin-top: 50px;
+  font-size: 12px;
+}
+
+.footer .row button:hover {
+  background-color: #313538;
+}
+
+.footer .social {
+  margin-left: 10px;
+}
+
+.footer .social:hover {
+  background-color: #29299b !important;
+}
+
+.footer h1 {
+  color: white;
+}
+
+.footer p {
+  color: gray;
+}
+
+.footer p span {
+  color: white;
+}
+
+.footer-end {
+  width: 100%;
+  height: 100px;
+  background-color: #212529;
+  color: gray;
+  font-size: 12px;
+}
+
+@media only screen and (max-width: 736px) {
+  .header {
+    height: auto;
+  }
+  .header .btn {
+    display: none;
+  }
+  .header .blue-content {
+    margin-top: 100px !important;
+  }
+  .header .header-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+  }
+  .header .header-content .content {
+    margin-left: 0 !important;
+  }
+  .header .header-content video {
+    margin-top: 0 !important;
+    width: 400px !important;
+    margin-left: 0 !important;
+  }
+  .header .header-content .buy {
+    display: none !important;
+  }
+  .section1 {
+    height: auto;
+  }
+  .section1 .content {
+    width: 300px !important;
+  }
+  .section1 .p-content {
+    width: 400px !important;
+  }
+  .section1 .card-main {
+    width: 100% !important;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+    -webkit-box-align: center !important;
+        -ms-flex-align: center !important;
+            align-items: center !important;
+  }
+  .section1 .card-main .card {
+    margin-top: 20px;
+  }
+  .section2 {
+    height: auto;
+    -webkit-clip-path: polygon(0 5%, 100% 0, 100% 96%, 0% 100%);
+            clip-path: polygon(0 5%, 100% 0, 100% 96%, 0% 100%);
+  }
+  .section2 .cards-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .section3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center !important;
+        -ms-flex-align: center !important;
+            align-items: center !important;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 700px;
+  }
+  .section3 .img-div {
+    display: none;
+  }
+  .section3 img {
+    display: none;
+  }
+  .section3 .sect3-content {
+    width: 100% !important;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+    margin-top: 50px;
+  }
+  .section4 {
+    height: 800px;
+  }
+  .section4 .sect4-content {
+    margin-top: 100px;
+  }
+  .section4 .carousel {
+    width: 100% !important;
+  }
+  .section4 .carousel .slider-content {
+    width: 400px !important;
+  }
+  .footer {
+    height: auto;
+  }
+  .footer .row {
+    width: 100% !important;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical  !important;
+    -webkit-box-direction: normal  !important;
+        -ms-flex-direction: column  !important;
+            flex-direction: column  !important;
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer .row button {
+    width: 130px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: #151719;
+    border: none;
+    color: white;
+    font-weight: 500;
+    font-size: 12px;
+    margin-top: 10px;
+  }
+  .footer .row button:hover {
+    background-color: #313538;
+  }
+  .footer .row #btn1 {
+    width: 150px;
+  }
+  .footer .row #btn2 {
+    width: 140px;
+  }
+  .footer .row #btn3 {
+    width: 130px;
+  }
+  .footer .row #btn4 {
+    width: 120px;
+  }
+  .footer .row #btn5 {
+    width: 110px;
+  }
+  .footer .row #btn6 {
+    width: 100px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
