--- a/style.css
+++ b/style.css
@@ -1,29 +1,52 @@
 .container{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-  
-
-}
-.card{
-    width: 250px;
-    height: 150px;
-    background-color: #252734;
-    cursor: pointer;
-    color: white;
+    width: 600px;
+    height: 600px;
+    background:linear-gradient(to right, red , yellow);
     margin: auto;
-    border-radius: 10px;
+    text-align: center;
 }
-.col{
-    margin-left: 50px;
+input{
+    width: 400px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    
+}
+button{
+    border: none;
+    border-radius: 50%;
+    outline: none;
+    width: 40px;
+    height: 40px;
+    background-color: red;
+    cursor: pointer;
+}
+button:hover{
+    background-color: white;
+    transition: .3s;
 }
 li{
+
+    text-align: center;
     list-style: none;
+    border: 2px solid white ;
+    background-color: white;
+    width: 400px;  
+    height: 30px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    margin-left: 50px;
+    border-radius: 20px;
+    margin-top: 20px;
+    outline: none;
 }
-.colorcard{
-    background-color: green;
+li:hover{
+    background-color: lightgray;
+    border: none;
+   
 }
-.card:hover{
-    background-color: #EF3E5B;
+.checked{
+    text-decoration: line-through;
+    background-color: lightgray;
+    border: none;
 }
